horizontal scroll test in Map fixed

--- a/style/takePicture.css
+++ b/style/takePicture.css
@@ -2,12 +2,13 @@
 /*Nueva paleta:(azul)0ebfb2 (marron)402f18 (verde)8cbf3b (crudo)dee3e5 (salmon)f74855*/
 .contenedorcito{
 	height: 24%;
+	margin-left: -62%!important;
+	min-width: 191%;
 	background-color: black;
 }
 
 .divli{
 	float: right;
-	background-image: url("../img/gplaypattern.png");
 	height: 100px;
 	width: 100px;
 }
@@ -289,6 +290,7 @@ header{
 }
 
 .ulFri{
+	height: 55%;
 }
 
 .ulFri li{
